// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FindAnimalBreed /> Snaphot must match findCatBreedRender 1`] = `
<div
  className="breed"
>
  <h2>
    A random image of 
     breed
  </h2>
  <h4>
    Type in new breed, press enter or click search
  </h4>
  <div
    className="breedSearch"
  >
    <input
      className="input"
      onKeyUp={[Function]}
    />
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      Search Cat
    </button>
  </div>
  <div
    className="breedShow"
  >
    <div
      className="image"
    >
      <img
        alt="beng"
        src="https://66.media.tumblr.com/tumblr_m4iejdP8Hb1qd477zo1_250.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`<FindAnimalBreed /> Snaphot must match findDogBreedRender 1`] = `
<div
  className="breed"
>
  <h2>
    A random image of 
     breed
  </h2>
  <h4>
    Type in new breed, press enter or click search
  </h4>
  <div
    className="breedSearch"
  >
    <input
      className="input"
      onKeyUp={[Function]}
    />
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      Search Dog
    </button>
  </div>
  <div
    className="breedShow"
  >
    <div
      className="image"
    >
      <img
        alt="collie"
        src="https://images.dog.ceo/breeds/collie-border/n02106166_1031.jpg"
      />
    </div>
  </div>
</div>
`;
